--- a/defconfig/amlogic-5.11.y_defconfig
+++ b/defconfig/amlogic-5.11.y_defconfig
@@ -1,11 +1,11 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.11.4 Kernel Configuration
+# Linux/arm64 5.11.8 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (GNU Toolchain for the A-profile Architecture 8.3-2019.03 (arm-rel-8.36)) 8.3.0"
+CONFIG_CC_VERSION_TEXT="gcc-8 (Ubuntu/Linaro 8.4.0-3ubuntu2) 8.4.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=80300
-CONFIG_LD_VERSION=232000000
+CONFIG_GCC_VERSION=80400
+CONFIG_LD_VERSION=234000000
 CONFIG_CLANG_VERSION=0
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
@@ -47,7 +47,6 @@ CONFIG_GENERIC_IRQ_SHOW_LEVEL=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HARDIRQS_SW_RESEND=y
-CONFIG_GENERIC_IRQ_CHIP=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_SIM=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
@@ -312,7 +311,7 @@ CONFIG_ARCH_MESON=y
 # CONFIG_ARCH_QCOM is not set
 # CONFIG_ARCH_REALTEK is not set
 # CONFIG_ARCH_RENESAS is not set
-CONFIG_ARCH_ROCKCHIP=y
+# CONFIG_ARCH_ROCKCHIP is not set
 # CONFIG_ARCH_S32 is not set
 # CONFIG_ARCH_SEATTLE is not set
 # CONFIG_ARCH_STRATIX10 is not set
@@ -449,6 +448,7 @@ CONFIG_ARM64_CNP=y
 CONFIG_ARM64_PTR_AUTH=y
 CONFIG_CC_HAS_SIGN_RETURN_ADDRESS=y
 CONFIG_AS_HAS_PAC=y
+CONFIG_AS_HAS_CFI_NEGATE_RA_STATE=y
 # end of ARMv8.3 architectural features
 
 #
@@ -466,6 +466,8 @@ CONFIG_AS_HAS_ARMV8_5=y
 CONFIG_ARM64_BTI=y
 CONFIG_ARM64_E0PD=y
 CONFIG_ARCH_RANDOM=y
+CONFIG_ARM64_AS_HAS_MTE=y
+CONFIG_ARM64_MTE=y
 # end of ARMv8.5 architectural features
 
 CONFIG_ARM64_SVE=y
@@ -609,7 +611,6 @@ CONFIG_UEFI_CPER_ARM=y
 CONFIG_EFI_EARLYCON=y
 CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
 CONFIG_MESON_SM=y
-CONFIG_MESON_GX_PM=y
 CONFIG_ARM_PSCI_FW=y
 # CONFIG_ARM_PSCI_CHECKER is not set
 CONFIG_HAVE_ARM_SMCCC=y
@@ -683,10 +684,10 @@ CONFIG_HAVE_KVM_IRQ_BYPASS=y
 CONFIG_HAVE_KVM_VCPU_RUN_PID_CHANGE=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA256_ARM64=y
-# CONFIG_CRYPTO_SHA512_ARM64 is not set
+CONFIG_CRYPTO_SHA512_ARM64=m
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
-# CONFIG_CRYPTO_SHA512_ARM64_CE is not set
+CONFIG_CRYPTO_SHA512_ARM64_CE=m
 CONFIG_CRYPTO_SHA3_ARM64=m
 CONFIG_CRYPTO_SM3_ARM64_CE=m
 CONFIG_CRYPTO_SM4_ARM64_CE=m
@@ -791,10 +792,6 @@ CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 # end of GCOV-based kernel profiling
 
 CONFIG_HAVE_GCC_PLUGINS=y
-CONFIG_GCC_PLUGINS=y
-# CONFIG_GCC_PLUGIN_CYC_COMPLEXITY is not set
-# CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
-# CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
 # end of General architecture-dependent options
 
 CONFIG_RT_MUTEXES=y
@@ -954,6 +951,7 @@ CONFIG_GENERIC_EARLY_IOREMAP=y
 # CONFIG_IDLE_PAGE_TRACKING is not set
 CONFIG_ARCH_HAS_PTE_DEVMAP=y
 CONFIG_FRAME_VECTOR=y
+CONFIG_ARCH_USES_HIGH_VMA_FLAGS=y
 # CONFIG_PERCPU_STATS is not set
 # CONFIG_GUP_TEST is not set
 # CONFIG_READ_ONLY_THP_FOR_FS is not set
@@ -2017,8 +2015,6 @@ CONFIG_PCI_XGENE_MSI=y
 # CONFIG_PCIE_ALTERA is not set
 CONFIG_PCI_HOST_THUNDER_PEM=y
 CONFIG_PCI_HOST_THUNDER_ECAM=y
-CONFIG_PCIE_ROCKCHIP=y
-CONFIG_PCIE_ROCKCHIP_HOST=m
 # CONFIG_PCIE_HISI_ERR is not set
 
 #
@@ -2230,7 +2226,6 @@ CONFIG_MTD_NAND_PLATFORM=m
 CONFIG_MTD_NAND_CADENCE=m
 # CONFIG_MTD_NAND_ARASAN is not set
 CONFIG_MTD_NAND_INTEL_LGM=m
-CONFIG_MTD_NAND_ROCKCHIP=m
 
 #
 # Misc
@@ -2363,8 +2358,6 @@ CONFIG_PCI_ENDPOINT_TEST=m
 CONFIG_MISC_RTSX=m
 # CONFIG_PVPANIC is not set
 CONFIG_HISI_HIKEY_USB=m
-CONFIG_KHADAS_FAN=m
-# CONFIG_KHADAS_MCU is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -2789,8 +2782,6 @@ CONFIG_AMD_XGBE=y
 CONFIG_NET_VENDOR_AQUANTIA=y
 CONFIG_AQTION=m
 CONFIG_NET_VENDOR_ARC=y
-CONFIG_ARC_EMAC_CORE=m
-CONFIG_EMAC_ROCKCHIP=m
 CONFIG_NET_VENDOR_ATHEROS=y
 CONFIG_ATL2=m
 CONFIG_ATL1=m
@@ -2976,7 +2967,6 @@ CONFIG_STMMAC_PLATFORM=y
 # CONFIG_DWMAC_DWC_QOS_ETH is not set
 CONFIG_DWMAC_GENERIC=m
 CONFIG_DWMAC_MESON=m
-CONFIG_DWMAC_ROCKCHIP=m
 CONFIG_DWMAC_INTEL_PLAT=m
 # CONFIG_STMMAC_PCI is not set
 CONFIG_NET_VENDOR_SUN=y
@@ -3377,15 +3367,6 @@ CONFIG_WLCORE=m
 CONFIG_WLCORE_SPI=m
 CONFIG_WLCORE_SDIO=m
 CONFIG_WILINK_PLATFORM_DATA=y
-CONFIG_RTL8723DU=m
-CONFIG_RTL8723DS=m
-CONFIG_RTL8822BU=m
-CONFIG_RTL8188EU=m
-CONFIG_RTL8821CU=m
-CONFIG_88XXAU=m
-CONFIG_RTL8192EU=m
-CONFIG_RTL8189FS=m
-CONFIG_RTL8189ES=m
 CONFIG_WLAN_VENDOR_ZYDAS=y
 CONFIG_USB_ZD1201=m
 CONFIG_ZD1211RW=m
@@ -3633,7 +3614,6 @@ CONFIG_TOUCHSCREEN_ZFORCE=m
 CONFIG_TOUCHSCREEN_ROHM_BU21023=m
 CONFIG_TOUCHSCREEN_IQS5XX=m
 CONFIG_TOUCHSCREEN_ZINITIX=m
-CONFIG_TOUCHSCREEN_DWAV_USB_MT=m
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_88PM860X_ONKEY=m
 CONFIG_INPUT_88PM80X_ONKEY=m
@@ -4093,7 +4073,6 @@ CONFIG_PINCTRL_DA9062=m
 CONFIG_PINCTRL_MCP23S08_I2C=m
 CONFIG_PINCTRL_MCP23S08_SPI=m
 CONFIG_PINCTRL_MCP23S08=m
-CONFIG_PINCTRL_ROCKCHIP=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_PINCTRL_SX150X=y
 # CONFIG_PINCTRL_STMFX is not set
@@ -4591,7 +4570,6 @@ CONFIG_DEVFREQ_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
 CONFIG_THERMAL_MMIO=m
 CONFIG_MAX77620_THERMAL=m
-CONFIG_ROCKCHIP_THERMAL=m
 CONFIG_DA9062_THERMAL=m
 CONFIG_AMLOGIC_THERMAL=y
 CONFIG_GENERIC_ADC_THERMAL=m
@@ -5356,7 +5334,6 @@ CONFIG_VIDEO_CADENCE_CSI2RX=m
 CONFIG_VIDEO_CADENCE_CSI2TX=m
 CONFIG_VIDEO_ASPEED=m
 CONFIG_VIDEO_MUX=m
-CONFIG_VIDEO_ROCKCHIP_ISP1=m
 CONFIG_VIDEO_XILINX=m
 CONFIG_VIDEO_XILINX_CSI2RXSS=m
 CONFIG_VIDEO_XILINX_TPG=m
@@ -5364,7 +5341,6 @@ CONFIG_VIDEO_XILINX_VTC=m
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_MEM2MEM_DEINTERLACE=m
 CONFIG_VIDEO_MESON_GE2D=m
-CONFIG_VIDEO_ROCKCHIP_RGA=m
 CONFIG_DVB_PLATFORM_DRIVERS=y
 CONFIG_SDR_PLATFORM_DRIVERS=y
 
@@ -6122,10 +6098,12 @@ CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 # CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER is not set
-CONFIG_BOOTSPLASH=y
 # end of Console display driver support
 
-# CONFIG_LOGO is not set
+CONFIG_LOGO=y
+# CONFIG_LOGO_LINUX_MONO is not set
+# CONFIG_LOGO_LINUX_VGA16 is not set
+CONFIG_LOGO_LINUX_CLUT224=y
 # end of Graphics support
 
 CONFIG_SOUND=m
@@ -6316,14 +6294,6 @@ CONFIG_SND_MESON_G12A_TOHDMITX=m
 CONFIG_SND_SOC_MESON_T9015=m
 # end of ASoC support for Amlogic platforms
 
-CONFIG_SND_SOC_ROCKCHIP=m
-CONFIG_SND_SOC_ROCKCHIP_I2S=m
-CONFIG_SND_SOC_ROCKCHIP_PDM=m
-CONFIG_SND_SOC_ROCKCHIP_SPDIF=m
-CONFIG_SND_SOC_ROCKCHIP_MAX98090=m
-CONFIG_SND_SOC_ROCKCHIP_RT5645=m
-CONFIG_SND_SOC_RK3288_HDMI_ANALOG=m
-CONFIG_SND_SOC_RK3399_GRU_SOUND=m
 # CONFIG_SND_SOC_SOF_TOPLEVEL is not set
 
 #
@@ -6393,7 +6363,6 @@ CONFIG_SND_SOC_CS4349=m
 CONFIG_SND_SOC_CS53L30=m
 CONFIG_SND_SOC_CX2072X=m
 CONFIG_SND_SOC_DA7213=m
-CONFIG_SND_SOC_DA7219=m
 CONFIG_SND_SOC_DMIC=m
 CONFIG_SND_SOC_HDMI_CODEC=m
 CONFIG_SND_SOC_ES7134=m
@@ -6405,7 +6374,6 @@ CONFIG_SND_SOC_ES8328_SPI=m
 CONFIG_SND_SOC_GTM601=m
 CONFIG_SND_SOC_INNO_RK3036=m
 CONFIG_SND_SOC_MAX98088=m
-CONFIG_SND_SOC_MAX98090=m
 CONFIG_SND_SOC_MAX98357A=m
 CONFIG_SND_SOC_MAX98504=m
 CONFIG_SND_SOC_MAX9867=m
@@ -6437,11 +6405,8 @@ CONFIG_SND_SOC_PCM512x_I2C=m
 CONFIG_SND_SOC_PCM512x_SPI=m
 CONFIG_SND_SOC_RK3328=m
 CONFIG_SND_SOC_RL6231=m
-CONFIG_SND_SOC_RT5514=m
-CONFIG_SND_SOC_RT5514_SPI=m
 CONFIG_SND_SOC_RT5616=m
 CONFIG_SND_SOC_RT5631=m
-CONFIG_SND_SOC_RT5645=m
 CONFIG_SND_SOC_SGTL5000=m
 CONFIG_SND_SOC_SIGMADSP=m
 CONFIG_SND_SOC_SIGMADSP_I2C=m
@@ -7113,7 +7078,6 @@ CONFIG_MMC_DW_EXYNOS=y
 CONFIG_MMC_DW_HI3798CV200=y
 CONFIG_MMC_DW_K3=y
 # CONFIG_MMC_DW_PCI is not set
-CONFIG_MMC_DW_ROCKCHIP=m
 # CONFIG_MMC_VUB300 is not set
 # CONFIG_MMC_USHC is not set
 # CONFIG_MMC_USDHI6ROL0 is not set
@@ -7583,9 +7547,7 @@ CONFIG_AD9834=m
 
 CONFIG_FB_SM750=m
 CONFIG_STAGING_MEDIA=y
-# CONFIG_VIDEO_HANTRO is not set
 CONFIG_VIDEO_MESON_VDEC=m
-# CONFIG_VIDEO_ROCKCHIP_VDEC is not set
 CONFIG_VIDEO_ZORAN=m
 CONFIG_VIDEO_ZORAN_DC30=m
 CONFIG_VIDEO_ZORAN_ZR36060=m
@@ -7736,12 +7698,6 @@ CONFIG_COMMON_CLK_AXG_AUDIO=m
 CONFIG_COMMON_CLK_G12A=y
 # end of Clock support for Amlogic platforms
 
-CONFIG_COMMON_CLK_ROCKCHIP=y
-CONFIG_CLK_PX30=y
-CONFIG_CLK_RK3308=y
-CONFIG_CLK_RK3328=y
-CONFIG_CLK_RK3368=y
-CONFIG_CLK_RK3399=y
 CONFIG_HWSPINLOCK=y
 
 #
@@ -7750,8 +7706,6 @@ CONFIG_HWSPINLOCK=y
 CONFIG_TIMER_OF=y
 CONFIG_TIMER_ACPI=y
 CONFIG_TIMER_PROBE=y
-CONFIG_CLKSRC_MMIO=y
-CONFIG_ROCKCHIP_TIMER=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 CONFIG_ARM_ARCH_TIMER_OOL_WORKAROUND=y
@@ -7766,7 +7720,6 @@ CONFIG_ARM_MHU=y
 CONFIG_ARM_MHU_V2=m
 CONFIG_PLATFORM_MHU=y
 # CONFIG_PL320_MBOX is not set
-# CONFIG_ROCKCHIP_MBOX is not set
 CONFIG_PCC=y
 # CONFIG_ALTERA_MBOX is not set
 # CONFIG_MAILBOX_TEST is not set
@@ -7787,7 +7740,6 @@ CONFIG_IOMMU_IO_PGTABLE_LPAE=y
 # CONFIG_IOMMU_DEFAULT_PASSTHROUGH is not set
 CONFIG_OF_IOMMU=y
 CONFIG_IOMMU_DMA=y
-# CONFIG_ROCKCHIP_IOMMU is not set
 CONFIG_ARM_SMMU=y
 # CONFIG_ARM_SMMU_LEGACY_DT_BINDINGS is not set
 CONFIG_ARM_SMMU_DISABLE_BYPASS_BY_DEFAULT=y
@@ -7860,9 +7812,6 @@ CONFIG_LITEX_SOC_CONTROLLER=m
 CONFIG_QCOM_QMI_HELPERS=m
 # end of Qualcomm SoC drivers
 
-CONFIG_ROCKCHIP_GRF=y
-CONFIG_ROCKCHIP_IODOMAIN=m
-# CONFIG_ROCKCHIP_PM_DOMAINS is not set
 CONFIG_SOC_TI=y
 
 #
@@ -7886,7 +7835,6 @@ CONFIG_DEVFREQ_GOV_PASSIVE=m
 #
 # DEVFREQ Drivers
 #
-# CONFIG_ARM_RK3399_DMC_DEVFREQ is not set
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
 
@@ -8034,7 +7982,6 @@ CONFIG_QCOM_VADC_COMMON=m
 # CONFIG_QCOM_SPMI_VADC is not set
 CONFIG_QCOM_SPMI_ADC5=m
 CONFIG_RN5T618_ADC=m
-CONFIG_ROCKCHIP_SARADC=m
 # CONFIG_SD_ADC_MODULATOR is not set
 CONFIG_TI_ADC081C=m
 CONFIG_TI_ADC0832=m
@@ -8460,12 +8407,10 @@ CONFIG_PWM_ATMEL_TCB=m
 # CONFIG_PWM_CROS_EC is not set
 CONFIG_PWM_DWC=m
 # CONFIG_PWM_FSL_FTM is not set
-CONFIG_PWM_GPIO=m
 CONFIG_PWM_IQS620A=m
 CONFIG_PWM_LP3943=m
 CONFIG_PWM_MESON=y
 # CONFIG_PWM_PCA9685 is not set
-CONFIG_PWM_ROCKCHIP=m
 CONFIG_PWM_TWL=m
 CONFIG_PWM_TWL_LED=m
 
@@ -8486,7 +8431,6 @@ CONFIG_MESON_IRQ_GPIO=y
 # end of IRQ chip support
 
 # CONFIG_IPACK_BUS is not set
-CONFIG_ARCH_HAS_RESET_CONTROLLER=y
 CONFIG_RESET_CONTROLLER=y
 # CONFIG_RESET_BRCMSTB_RESCAL is not set
 # CONFIG_RESET_INTEL_GW is not set
@@ -8522,15 +8466,6 @@ CONFIG_PHY_FSL_IMX8MQ_USB=m
 # CONFIG_PHY_OCELOT_SERDES is not set
 CONFIG_PHY_QCOM_USB_HS=y
 # CONFIG_PHY_QCOM_USB_HSIC is not set
-CONFIG_PHY_ROCKCHIP_DP=m
-CONFIG_PHY_ROCKCHIP_DPHY_RX0=m
-CONFIG_PHY_ROCKCHIP_EMMC=m
-CONFIG_PHY_ROCKCHIP_INNO_HDMI=m
-CONFIG_PHY_ROCKCHIP_INNO_USB2=m
-CONFIG_PHY_ROCKCHIP_INNO_DSIDPHY=m
-CONFIG_PHY_ROCKCHIP_PCIE=m
-CONFIG_PHY_ROCKCHIP_TYPEC=m
-CONFIG_PHY_ROCKCHIP_USB=m
 CONFIG_PHY_SAMSUNG_USB2=y
 # CONFIG_PHY_TUSB1210 is not set
 # end of PHY Subsystem
@@ -8570,8 +8505,6 @@ CONFIG_DEV_DAX=m
 CONFIG_NVMEM=y
 CONFIG_NVMEM_SYSFS=y
 CONFIG_NVMEM_SPMI_SDAM=m
-CONFIG_ROCKCHIP_EFUSE=m
-CONFIG_ROCKCHIP_OTP=m
 CONFIG_MESON_EFUSE=y
 CONFIG_MESON_MX_EFUSE=y
 CONFIG_RAVE_SP_EEPROM=m
@@ -9077,10 +9010,6 @@ CONFIG_LSM="lockdown,yama,integrity,apparmor"
 # Memory initialization
 #
 CONFIG_INIT_STACK_NONE=y
-# CONFIG_GCC_PLUGIN_STRUCTLEAK_USER is not set
-# CONFIG_GCC_PLUGIN_STRUCTLEAK_BYREF is not set
-# CONFIG_GCC_PLUGIN_STRUCTLEAK_BYREF_ALL is not set
-# CONFIG_GCC_PLUGIN_STACKLEAK is not set
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 # CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
 # end of Memory initialization
@@ -9286,7 +9215,6 @@ CONFIG_CRYPTO_DEV_ATMEL_SHA204A=m
 CONFIG_CRYPTO_DEV_NITROX=m
 CONFIG_CRYPTO_DEV_NITROX_CNN55XX=m
 # CONFIG_CRYPTO_DEV_CAVIUM_ZIP is not set
-CONFIG_CRYPTO_DEV_ROCKCHIP=m
 CONFIG_CRYPTO_DEV_VIRTIO=m
 CONFIG_CRYPTO_DEV_SAFEXCEL=m
 CONFIG_CRYPTO_DEV_CCREE=m
@@ -9558,6 +9486,7 @@ CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
 CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_HAVE_ARCH_KASAN_SW_TAGS=y
+CONFIG_HAVE_ARCH_KASAN_HW_TAGS=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 CONFIG_CC_HAS_WORKING_NOSANITIZE_ADDRESS=y
 # CONFIG_KASAN is not set
