--- a/defconfig/amlogic-5.11.y_defconfig
+++ b/defconfig/amlogic-5.11.y_defconfig
@@ -40,7 +40,6 @@ CONFIG_BPF_SYSCALL=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
 CONFIG_ARCH_MESON=y
-CONFIG_ARCH_ROCKCHIP=y
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
 CONFIG_NUMA=y
@@ -85,6 +84,7 @@ CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
+CONFIG_CRYPTO_SHA512_ARM64_CE=m
 CONFIG_CRYPTO_SHA3_ARM64=m
 CONFIG_CRYPTO_SM3_ARM64_CE=m
 CONFIG_CRYPTO_SM4_ARM64_CE=m
@@ -701,7 +701,6 @@ CONFIG_PCI_HOST_GENERIC=y
 CONFIG_PCI_XGENE=y
 CONFIG_PCI_HOST_THUNDER_PEM=y
 CONFIG_PCI_HOST_THUNDER_ECAM=y
-CONFIG_PCIE_ROCKCHIP_HOST=m
 CONFIG_PCI_HISI=y
 CONFIG_PCIE_KIRIN=y
 CONFIG_PCI_MESON=y
@@ -736,7 +735,6 @@ CONFIG_MTD_NAND_GPIO=m
 CONFIG_MTD_NAND_PLATFORM=m
 CONFIG_MTD_NAND_CADENCE=m
 CONFIG_MTD_NAND_INTEL_LGM=m
-CONFIG_MTD_NAND_ROCKCHIP=m
 CONFIG_MTD_NAND_NANDSIM=m
 CONFIG_MTD_NAND_RICOH=m
 CONFIG_MTD_NAND_DISKONCHIP=m
@@ -903,7 +901,6 @@ CONFIG_NET_DSA_VITESSE_VSC73XX_SPI=m
 CONFIG_NET_DSA_VITESSE_VSC73XX_PLATFORM=m
 CONFIG_AMD_XGBE=y
 CONFIG_AQTION=m
-CONFIG_EMAC_ROCKCHIP=m
 CONFIG_ATL2=m
 CONFIG_ATL1=m
 CONFIG_ATL1E=m
@@ -942,7 +939,6 @@ CONFIG_SMSC911X=y
 CONFIG_STMMAC_ETH=y
 CONFIG_DWMAC_GENERIC=m
 CONFIG_DWMAC_MESON=m
-CONFIG_DWMAC_ROCKCHIP=m
 CONFIG_DWMAC_INTEL_PLAT=m
 CONFIG_XILINX_AXI_EMAC=m
 CONFIG_XILINX_LL_TEMAC=m
@@ -1764,7 +1760,6 @@ CONFIG_DEVFREQ_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
 CONFIG_THERMAL_MMIO=m
 CONFIG_MAX77620_THERMAL=m
-CONFIG_ROCKCHIP_THERMAL=m
 CONFIG_DA9062_THERMAL=m
 CONFIG_GENERIC_ADC_THERMAL=m
 CONFIG_KHADAS_MCU_FAN_THERMAL=m
@@ -2231,14 +2226,12 @@ CONFIG_VIDEO_CADENCE_CSI2RX=m
 CONFIG_VIDEO_CADENCE_CSI2TX=m
 CONFIG_VIDEO_ASPEED=m
 CONFIG_VIDEO_MUX=m
-CONFIG_VIDEO_ROCKCHIP_ISP1=m
 CONFIG_VIDEO_XILINX=m
 CONFIG_VIDEO_XILINX_CSI2RXSS=m
 CONFIG_VIDEO_XILINX_TPG=m
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_MEM2MEM_DEINTERLACE=m
 CONFIG_VIDEO_MESON_GE2D=m
-CONFIG_VIDEO_ROCKCHIP_RGA=m
 CONFIG_DVB_PLATFORM_DRIVERS=y
 CONFIG_SDR_PLATFORM_DRIVERS=y
 CONFIG_SMS_SDIO_DRV=m
@@ -2466,6 +2459,9 @@ CONFIG_BACKLIGHT_RAVE_SP=m
 CONFIG_BACKLIGHT_LED=m
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
+CONFIG_LOGO=y
+# CONFIG_LOGO_LINUX_MONO is not set
+# CONFIG_LOGO_LINUX_VGA16 is not set
 CONFIG_SOUND=m
 CONFIG_SND=m
 CONFIG_SND_SEQUENCER=m
@@ -2510,13 +2506,6 @@ CONFIG_SND_SOC_FSL_MICFIL=m
 CONFIG_SND_SOC_FSL_XCVR=m
 CONFIG_SND_MESON_AXG_SOUND_CARD=m
 CONFIG_SND_MESON_GX_SOUND_CARD=m
-CONFIG_SND_SOC_ROCKCHIP=m
-CONFIG_SND_SOC_ROCKCHIP_PDM=m
-CONFIG_SND_SOC_ROCKCHIP_SPDIF=m
-CONFIG_SND_SOC_ROCKCHIP_MAX98090=m
-CONFIG_SND_SOC_ROCKCHIP_RT5645=m
-CONFIG_SND_SOC_RK3288_HDMI_ANALOG=m
-CONFIG_SND_SOC_RK3399_GRU_SOUND=m
 CONFIG_SND_SOC_XILINX_I2S=m
 CONFIG_SND_SOC_XILINX_AUDIO_FORMATTER=m
 CONFIG_SND_SOC_XILINX_SPDIF=m
@@ -2566,9 +2555,12 @@ CONFIG_SND_SOC_DA7213=m
 CONFIG_SND_SOC_ES7134=m
 CONFIG_SND_SOC_ES7241=m
 CONFIG_SND_SOC_ES8316=m
+CONFIG_SND_SOC_ES8328_I2C=m
+CONFIG_SND_SOC_ES8328_SPI=m
 CONFIG_SND_SOC_GTM601=m
 CONFIG_SND_SOC_INNO_RK3036=m
 CONFIG_SND_SOC_MAX98088=m
+CONFIG_SND_SOC_MAX98357A=m
 CONFIG_SND_SOC_MAX98504=m
 CONFIG_SND_SOC_MAX9867=m
 CONFIG_SND_SOC_MAX98927=m
@@ -2621,6 +2613,7 @@ CONFIG_SND_SOC_TLV320AIC32X4_I2C=m
 CONFIG_SND_SOC_TLV320AIC32X4_SPI=m
 CONFIG_SND_SOC_TLV320AIC3X=m
 CONFIG_SND_SOC_TLV320ADCX140=m
+CONFIG_SND_SOC_TS3A227E=m
 CONFIG_SND_SOC_TSCS42XX=m
 CONFIG_SND_SOC_TSCS454=m
 CONFIG_SND_SOC_UDA1334=m
@@ -3002,7 +2995,6 @@ CONFIG_MMC_DW=y
 CONFIG_MMC_DW_EXYNOS=y
 CONFIG_MMC_DW_HI3798CV200=y
 CONFIG_MMC_DW_K3=y
-CONFIG_MMC_DW_ROCKCHIP=m
 CONFIG_MMC_REALTEK_USB=m
 CONFIG_MMC_HSQ=m
 CONFIG_MMC_SDHCI_XENON=y
@@ -3269,7 +3261,6 @@ CONFIG_RPMSG_NS=m
 CONFIG_RPMSG_QCOM_GLINK_RPM=y
 CONFIG_SOC_BRCMSTB=y
 CONFIG_LITEX_SOC_CONTROLLER=m
-CONFIG_ROCKCHIP_IODOMAIN=m
 CONFIG_SOC_TI=y
 CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=m
@@ -3367,7 +3358,6 @@ CONFIG_MP2629_ADC=m
 CONFIG_PALMAS_GPADC=m
 CONFIG_QCOM_SPMI_ADC5=m
 CONFIG_RN5T618_ADC=m
-CONFIG_ROCKCHIP_SARADC=m
 CONFIG_TI_ADC081C=m
 CONFIG_TI_ADC0832=m
 CONFIG_TI_ADC084S021=m
@@ -3530,7 +3520,6 @@ CONFIG_PWM_DWC=m
 CONFIG_PWM_IQS620A=m
 CONFIG_PWM_LP3943=m
 CONFIG_PWM_MESON=y
-CONFIG_PWM_ROCKCHIP=m
 CONFIG_PWM_TWL=m
 CONFIG_PWM_TWL_LED=m
 CONFIG_PHY_XGENE=y
@@ -3540,15 +3529,6 @@ CONFIG_PHY_CADENCE_SIERRA=m
 CONFIG_PHY_CADENCE_SALVO=m
 CONFIG_PHY_FSL_IMX8MQ_USB=m
 CONFIG_PHY_QCOM_USB_HS=y
-CONFIG_PHY_ROCKCHIP_DP=m
-CONFIG_PHY_ROCKCHIP_DPHY_RX0=m
-CONFIG_PHY_ROCKCHIP_EMMC=m
-CONFIG_PHY_ROCKCHIP_INNO_HDMI=m
-CONFIG_PHY_ROCKCHIP_INNO_USB2=m
-CONFIG_PHY_ROCKCHIP_INNO_DSIDPHY=m
-CONFIG_PHY_ROCKCHIP_PCIE=m
-CONFIG_PHY_ROCKCHIP_TYPEC=m
-CONFIG_PHY_ROCKCHIP_USB=m
 CONFIG_PHY_SAMSUNG_USB2=y
 CONFIG_ARM_CMN=m
 CONFIG_ARM_DMC620_PMU=m
@@ -3557,8 +3537,6 @@ CONFIG_USB4=m
 CONFIG_USB4_DMA_TEST=m
 CONFIG_DEV_DAX=m
 CONFIG_NVMEM_SPMI_SDAM=m
-CONFIG_ROCKCHIP_EFUSE=m
-CONFIG_ROCKCHIP_OTP=m
 CONFIG_MESON_EFUSE=y
 CONFIG_MESON_MX_EFUSE=y
 CONFIG_RAVE_SP_EEPROM=m
@@ -3848,7 +3826,6 @@ CONFIG_CRYPTO_STATS=y
 CONFIG_CRYPTO_DEV_ATMEL_ECC=m
 CONFIG_CRYPTO_DEV_ATMEL_SHA204A=m
 CONFIG_CRYPTO_DEV_NITROX_CNN55XX=m
-CONFIG_CRYPTO_DEV_ROCKCHIP=m
 CONFIG_CRYPTO_DEV_VIRTIO=m
 CONFIG_CRYPTO_DEV_SAFEXCEL=m
 CONFIG_CRYPTO_DEV_CCREE=m
