--- a/defconfig/amlogic-broke_defconfig
+++ b/defconfig/amlogic-broke_defconfig
@@ -43,7 +43,6 @@ CONFIG_ARCH_MESON=y
 # CONFIG_QCOM_QDF2400_ERRATUM_0065 is not set
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
-CONFIG_SECCOMP=y
 CONFIG_KEXEC=y
 CONFIG_CRASH_DUMP=y
 CONFIG_XEN=y
@@ -66,6 +65,10 @@ CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
+CONFIG_CRYPTO_SHA512_ARM64_CE=m
+CONFIG_CRYPTO_SHA3_ARM64=m
+CONFIG_CRYPTO_SM3_ARM64_CE=m
+CONFIG_CRYPTO_SM4_ARM64_CE=m
 CONFIG_CRYPTO_GHASH_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
@@ -74,6 +77,7 @@ CONFIG_CRYPTO_AES_ARM64_BS=y
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_SIG=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_DEV_THROTTLING_LOW=y
 CONFIG_BLK_WBT=y
@@ -337,26 +341,6 @@ CONFIG_IP_NF_ARP_MANGLE=m
 CONFIG_NFT_DUP_IPV6=m
 CONFIG_NFT_FIB_IPV6=m
 CONFIG_NF_FLOW_TABLE_IPV6=m
-CONFIG_IP6_NF_MATCH_AH=m
-CONFIG_IP6_NF_MATCH_EUI64=m
-CONFIG_IP6_NF_MATCH_FRAG=m
-CONFIG_IP6_NF_MATCH_OPTS=m
-CONFIG_IP6_NF_MATCH_HL=m
-CONFIG_IP6_NF_MATCH_IPV6HEADER=m
-CONFIG_IP6_NF_MATCH_MH=m
-CONFIG_IP6_NF_MATCH_RPFILTER=m
-CONFIG_IP6_NF_MATCH_RT=m
-CONFIG_IP6_NF_MATCH_SRH=m
-CONFIG_IP6_NF_TARGET_HL=m
-CONFIG_IP6_NF_FILTER=m
-CONFIG_IP6_NF_TARGET_REJECT=m
-CONFIG_IP6_NF_TARGET_SYNPROXY=m
-CONFIG_IP6_NF_MANGLE=m
-CONFIG_IP6_NF_RAW=m
-CONFIG_IP6_NF_SECURITY=m
-CONFIG_IP6_NF_NAT=m
-CONFIG_IP6_NF_TARGET_MASQUERADE=m
-CONFIG_IP6_NF_TARGET_NPT=m
 CONFIG_DECNET_NF_GRABULATOR=m
 CONFIG_NF_TABLES_BRIDGE=m
 CONFIG_NFT_BRIDGE_REJECT=m
@@ -615,6 +599,8 @@ CONFIG_SCSI=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
 CONFIG_SCSI_SAS_LIBSAS=y
+CONFIG_ATA=m
+CONFIG_SATA_AHCI_PLATFORM=m
 CONFIG_MD=y
 CONFIG_MD_LINEAR=m
 CONFIG_MD_MULTIPATH=m
@@ -678,13 +664,13 @@ CONFIG_STMMAC_ETH=y
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
-CONFIG_MDIO_BITBANG=y
-CONFIG_MDIO_BUS_MUX_MMIOREG=y
 CONFIG_LED_TRIGGER_PHY=y
-CONFIG_AX88796B_PHY=m
 CONFIG_MESON_GXL_PHY=y
+CONFIG_AX88796B_PHY=m
 CONFIG_MICREL_PHY=y
 CONFIG_REALTEK_PHY=m
+CONFIG_MDIO_BITBANG=y
+CONFIG_MDIO_BUS_MUX_MMIOREG=y
 CONFIG_PPP=m
 CONFIG_PPP_BSDCOMP=m
 CONFIG_PPP_DEFLATE=m
@@ -786,6 +772,8 @@ CONFIG_USB_NET_RNDIS_WLAN=m
 CONFIG_IEEE802154_MCR20A=m
 # CONFIG_XEN_NETDEV_FRONTEND is not set
 CONFIG_NETDEVSIM=m
+CONFIG_NVM=y
+CONFIG_NVM_PBLK=m
 CONFIG_INPUT_MOUSEDEV=y
 CONFIG_INPUT_MOUSEDEV_PSAUX=y
 CONFIG_INPUT_EVDEV=y
@@ -797,6 +785,8 @@ CONFIG_TOUCHSCREEN_ADC=m
 CONFIG_INPUT_MISC=y
 CONFIG_SERIO_SERPORT=m
 CONFIG_SERIO_AMBAKMI=y
+CONFIG_GAMEPORT=m
+CONFIG_GAMEPORT_NS558=m
 # CONFIG_LEGACY_PTYS is not set
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
@@ -816,7 +806,6 @@ CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_I2C_MESON=y
 CONFIG_I2C_RK3X=y
-CONFIG_I2C_CROS_EC_TUNNEL=y
 CONFIG_I2C_SLAVE=y
 CONFIG_SPI=y
 CONFIG_SPI_GPIO=m
@@ -841,6 +830,8 @@ CONFIG_W1=m
 CONFIG_W1_MASTER_GPIO=m
 CONFIG_W1_SLAVE_THERM=m
 CONFIG_W1_SLAVE_DS28E17=m
+CONFIG_POWER_RESET_ODROID=y
+CONFIG_POWER_RESET_RESTART=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_BATTERY_MAX1721X=m
 CONFIG_SENSORS_AD7314=m
@@ -968,7 +959,6 @@ CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_CPU_THERMAL=y
-CONFIG_CLOCK_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
 CONFIG_WATCHDOG=y
 CONFIG_SOFT_WATCHDOG=m
@@ -999,7 +989,10 @@ CONFIG_IR_IMON_DECODER=m
 CONFIG_RC_DEVICES=y
 CONFIG_IR_IMON_RAW=m
 CONFIG_IR_MESON=m
+CONFIG_CEC_MESON_AO=m
+CONFIG_CEC_MESON_G12A_AO=m
 CONFIG_MEDIA_SUPPORT=m
+CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
 # CONFIG_DVB_NET is not set
 CONFIG_MEDIA_USB_SUPPORT=y
@@ -1118,17 +1111,70 @@ CONFIG_SMS_SDIO_DRV=m
 CONFIG_V4L_TEST_DRIVERS=y
 CONFIG_VIDEO_VIVID=m
 CONFIG_VIDEO_VIM2M=m
+CONFIG_CXD2880_SPI_DRV=m
+CONFIG_MEDIA_TUNER_MSI001=m
+CONFIG_MEDIA_TUNER_MT2131=m
+CONFIG_MEDIA_TUNER_FC0012=m
+CONFIG_MEDIA_TUNER_FC0013=m
+CONFIG_MEDIA_TUNER_E4000=m
+CONFIG_MEDIA_TUNER_M88RS6000T=m
+CONFIG_MEDIA_TUNER_R820T=m
+CONFIG_MEDIA_TUNER_MXL301RF=m
+CONFIG_MEDIA_TUNER_QM1D1B0004=m
+CONFIG_DVB_STV0910=m
+CONFIG_DVB_STV6111=m
+CONFIG_DVB_MXL5XX=m
+CONFIG_DVB_SI2165=m
+CONFIG_DVB_MN88473=m
+CONFIG_DVB_CX24110=m
+CONFIG_DVB_ZL10036=m
+CONFIG_DVB_TDA8083=m
+CONFIG_DVB_TDA8261=m
+CONFIG_DVB_VES1X93=m
+CONFIG_DVB_TUA6100=m
+CONFIG_DVB_CX24117=m
+CONFIG_DVB_MB86A16=m
+CONFIG_DVB_SP8870=m
+CONFIG_DVB_SP887X=m
+CONFIG_DVB_CX22700=m
+CONFIG_DVB_S5H1432=m
+CONFIG_DVB_L64781=m
+CONFIG_DVB_DIB9000=m
+CONFIG_DVB_STV0367=m
+CONFIG_DVB_CXD2841ER=m
+CONFIG_DVB_CXD2880=m
+CONFIG_DVB_VES1820=m
+CONFIG_DVB_TDA10021=m
+CONFIG_DVB_OR51211=m
+CONFIG_DVB_OR51132=m
+CONFIG_DVB_MN88443X=m
+CONFIG_DVB_LNBH25=m
+CONFIG_DVB_LNBH29=m
+CONFIG_DVB_ISL6405=m
+CONFIG_DVB_LGS8GL5=m
+CONFIG_DVB_TDA665x=m
+CONFIG_DVB_HORUS3A=m
+CONFIG_DVB_ASCOT2E=m
+CONFIG_DVB_HELENE=m
+CONFIG_DVB_CXD2099=m
 CONFIG_DRM=m
 CONFIG_DRM_I2C_CH7006=m
 CONFIG_DRM_I2C_SIL164=m
+CONFIG_DRM_HDLCD=m
+CONFIG_DRM_MALI_DISPLAY=m
+CONFIG_DRM_KOMEDA=m
+CONFIG_DRM_UDL=m
 CONFIG_DRM_RCAR_LVDS=m
 CONFIG_DRM_PANEL_ARM_VERSATILE=m
 CONFIG_DRM_DW_HDMI_CEC=m
 CONFIG_DRM_MESON=m
+CONFIG_DRM_LIMA=m
+CONFIG_DRM_PANFROST=m
 CONFIG_FB=y
 CONFIG_FB_ARMCLCD=y
 CONFIG_FB_UVESA=m
-CONFIG_BACKLIGHT_GENERIC=m
+CONFIG_FB_UDL=m
+CONFIG_FB_SIMPLE=y
 CONFIG_BACKLIGHT_PWM=m
 CONFIG_BACKLIGHT_GPIO=m
 CONFIG_FRAMEBUFFER_CONSOLE=y
@@ -1156,7 +1202,6 @@ CONFIG_SND_SOC=m
 CONFIG_SND_DESIGNWARE_I2S=m
 CONFIG_SND_MESON_AXG_SOUND_CARD=m
 CONFIG_SND_MESON_GX_SOUND_CARD=m
-CONFIG_SND_MESON_G12A_TOACODEC=m
 CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_ADAU1701=m
 CONFIG_SND_SOC_ADAU1761_I2C=m
@@ -1193,7 +1238,6 @@ CONFIG_SND_SOC_INNO_RK3036=m
 CONFIG_SND_SOC_MAX98504=m
 CONFIG_SND_SOC_MAX9867=m
 CONFIG_SND_SOC_MAX98927=m
-CONFIG_SND_SOC_MAX98373=m
 CONFIG_SND_SOC_MAX9860=m
 CONFIG_SND_SOC_PCM1681=m
 CONFIG_SND_SOC_PCM1789_I2C=m
@@ -1208,6 +1252,7 @@ CONFIG_SND_SOC_PCM512x_SPI=m
 CONFIG_SND_SOC_RT5616=m
 CONFIG_SND_SOC_RT5631=m
 CONFIG_SND_SOC_SGTL5000=m
+CONFIG_SND_SOC_SIMPLE_AMPLIFIER=m
 CONFIG_SND_SOC_SSM2305=m
 CONFIG_SND_SOC_SSM2602_SPI=m
 CONFIG_SND_SOC_SSM2602_I2C=m
@@ -1470,6 +1515,7 @@ CONFIG_DMADEVICES=y
 CONFIG_PL330_DMA=y
 CONFIG_QCOM_HIDMA_MGMT=y
 CONFIG_QCOM_HIDMA=y
+CONFIG_VIRT_DRIVERS=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_MMIO=y
 CONFIG_VHOST_NET=m
@@ -1483,6 +1529,9 @@ CONFIG_VHOST_NET=m
 CONFIG_STAGING=y
 CONFIG_RTL8723BS=m
 CONFIG_R8712U=m
+CONFIG_R8188EU=m
+CONFIG_STAGING_MEDIA=y
+CONFIG_VIDEO_MESON_VDEC=m
 CONFIG_FB_TFT=m
 CONFIG_FB_TFT_AGM1264K_FL=m
 CONFIG_FB_TFT_BD663474=m
@@ -1515,7 +1564,6 @@ CONFIG_FB_TFT_UC1611=m
 CONFIG_FB_TFT_UC1701=m
 CONFIG_FB_TFT_UPD161704=m
 CONFIG_FB_TFT_WATTEROTT=m
-CONFIG_MFD_CROS_EC=y
 CONFIG_COMMON_CLK_RK808=y
 CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_SI544=m
@@ -1528,7 +1576,6 @@ CONFIG_COMMON_CLK_PWM=y
 CONFIG_MAILBOX=y
 CONFIG_ARM_MHU=y
 CONFIG_PLATFORM_MHU=y
-# CONFIG_IOMMU_SUPPORT is not set
 CONFIG_EXTCON=y
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
@@ -1551,6 +1598,7 @@ CONFIG_PHY_XGENE=y
 CONFIG_PHY_SAMSUNG_USB2=y
 CONFIG_DAX=m
 CONFIG_DEV_DAX=m
+CONFIG_MESON_EFUSE=m
 CONFIG_MESON_MX_EFUSE=m
 CONFIG_TEE=y
 CONFIG_OPTEE=y
@@ -1586,6 +1634,7 @@ CONFIG_JOLIET=y
 CONFIG_UDF_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_EXFAT_FS=m
 CONFIG_NTFS_FS=m
 CONFIG_NTFS_RW=y
 CONFIG_TMPFS=y
@@ -1695,7 +1744,6 @@ CONFIG_CRYPTO_RMD128=m
 CONFIG_CRYPTO_RMD160=m
 CONFIG_CRYPTO_RMD256=m
 CONFIG_CRYPTO_RMD320=m
-CONFIG_CRYPTO_SHA3=m
 CONFIG_CRYPTO_TGR192=m
 CONFIG_CRYPTO_WP512=m
 CONFIG_CRYPTO_AES_TI=y
@@ -1724,7 +1772,6 @@ CONFIG_CRYPTO_USER_API_SKCIPHER=m
 CONFIG_CRYPTO_USER_API_RNG=m
 CONFIG_CRYPTO_USER_API_AEAD=m
 CONFIG_CRYPTO_DEV_CCREE=m
-CONFIG_CRYPTO_DEV_AMLOGIC_GXL=m
 CONFIG_PKCS7_TEST_KEY=m
 CONFIG_DMA_CMA=y
 CONFIG_PRINTK_TIME=y
@@ -1738,5 +1785,3 @@ CONFIG_DETECT_HUNG_TASK=y
 # CONFIG_STRICT_DEVMEM is not set
 CONFIG_ASYNC_RAID6_TEST=m
 CONFIG_MEMTEST=y
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
