--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -7,8 +7,9 @@ user=""
 passwd=""
 MOTD="Debian"
 HOSTNAME="computer"
-DEBIAN_VERSION="buster"
-VERSION="5.10.25"
+DISTRO="debian"
+DISTRO_VERSION="buster"
+VERSION="5.10.26"
 UBOOT_VERSION="v2021.01"
 menuconfig="0"
 mainline="0"
@@ -33,22 +34,25 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"Password:"	3 1	"$passwd"  		3 11 22 0 \
 	"Branding:"	4 1	"$MOTD"			4 11 22 0 \
 	"Hostname:"	5 1	"$HOSTNAME"		5 11 22 0 \
-	"Debian:"	6 1	"$DEBIAN_VERSION"  	6 9 24 0 \
-	""		7 1	""	 		7 14 0 0 \
-        "U-Boot:"   	8 1     "$UBOOT_VERSION"       	8 9 10 0 \
-        "Branch:"   	9 1     "$VERSION"        	9 9 10 0 \
-        "Mainline:"   	10 1     "$mainline"        	10 11 2 0 \
-	"Menuconfig:"	11 1	"$menuconfig"  		11 13 2 0 \
-	"Crosscompile:" 12 1	"$crosscompile" 	12 15 2 0 \
-	""		13 1	""	 		13 14 0 0 \
-	"Wireless"	14 1	""	 		14 14 0 0 \
-	"rtl88XXau:"	15 1	"$rtl88XXau"	 	15 12 2 0 \
-	"rtl88X2bu:"	16 1	"$rtl88X2bu"	 	16 12 2 0 \
-	"rtl88XXcu:"	17 1	"$rtl88XXcu"	 	17 12 2 0 \
-	""		18 1	""	 		18 14 0 0 \
-	"Customize"	19 1	""	 		19 14 0 0 \
-	"Defconfig:"	20 1	"$custom_defconfig" 	20 12 2 0 \
-	"Name:"		21 1	"$MYCONFIG"	  	21 7 27 0 \
+	""		6 1	""	 		6 14 0 0 \
+	"Distribution"	7 1	""	 		7 14 0 0 \
+	"Distro:"	8 1	"$DISTRO"	  	8 9 24 0 \
+	"Release:"	9 1	"$DISTRO_VERSION"  	9 10 23 0 \
+	""		10 1	""	 		10 14 0 0 \
+        "U-Boot:"   	11 1     "$UBOOT_VERSION"       11 9 10 0 \
+        "Branch:"   	12 1     "$VERSION"        	12 9 10 0 \
+        "Mainline:"   	13 1     "$mainline"        	13 11 2 0 \
+	"Menuconfig:"	14 1	"$menuconfig"  		14 13 2 0 \
+	"Crosscompile:" 15 1	"$crosscompile" 	15 15 2 0 \
+	""		16 1	""	 		16 14 0 0 \
+	"Wireless"	17 1	""	 		17 14 0 0 \
+	"rtl88XXau:"	18 1	"$rtl88XXau"	 	18 12 2 0 \
+	"rtl88X2bu:"	19 1	"$rtl88X2bu"	 	19 12 2 0 \
+	"rtl88XXcu:"	20 1	"$rtl88XXcu"	 	20 12 2 0 \
+	""		21 1	""	 		21 14 0 0 \
+	"Customize"	22 1	""	 		22 14 0 0 \
+	"Defconfig:"	23 1	"$custom_defconfig" 	23 12 2 0 \
+	"Name:"		24 1	"$MYCONFIG"	  	24 7 27 0 \
 2>&1 1>&3)
 
 # close fd
@@ -61,7 +65,8 @@ echo user='"' >> tmp0
 echo passwd='"' >> tmp0
 echo MOTD='"' >> tmp0
 echo HOSTNAME='"' >> tmp0
-echo DEBIAN_VERSION='"' >> tmp0
+echo DISTRO='"' >> tmp0
+echo DISTRO_VERSION='"' >> tmp0
 echo UBOOT_VERSION='"' >> tmp0
 echo VERSION='"' >> tmp0
 echo mainline= >> tmp0
@@ -76,6 +81,7 @@ echo emmc=0 >> tmp0
 echo verbose=0 >> tmp0
 echo auto=1 >> tmp0
 echo '"' > tmp2
+echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -99,11 +105,11 @@ echo GCC='"'$(gcc --version | grep gcc | awk '{print $4}')'"' >> userdata.txt
 
 # categories
 sed -i '1i### USER INFORMATION' userdata.txt
-sed -i '7i### DISTRIBUTION RELEASE' userdata.txt
-sed -i '9i### UBOOT AND LINUX KERNEL' userdata.txt
-sed -i '15i### WIRELESS' userdata.txt
-sed -i '19i### CUSTOM' userdata.txt
-sed -i '25i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
+sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
+sed -i '16i### WIRELESS' userdata.txt
+sed -i '20i### CUSTOM' userdata.txt
+sed -i '26i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear
